Working also on second file

--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
     <title>PHP Badwords: 1</title>
 </head>
 <body>
-    <form method="post" action="receive_data" >
-        <input type="text" name="userWord" placeholder="Scrivi una parola" />
+
+    <form method="post" action="receive_data.php" >
+        <input type="text" name="userWord" placeholder="Scrivi la parola 'lorem'." />
     </form>
-    <button>ciao</button>
+
+    <button>Premi per inviare i dati.</button>
+
 </body>
 </html>
