Added censored word (hardcoded)

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body>
 
     <form method="post" action="receive_data.php" >
-        <input type="text" name="userWord" placeholder="Scrivi la parola 'lorem'." />
+        <input type="text" name="word" placeholder="Scrivi la parola 'ciao'." />
     </form>
 
-    <button>Premi per inviare i dati.</button>
+    <button type="submit">Premi per inviare i dati.</button>
 
 </body>
 </html>
